--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ APP_KEY=1234abcd5678efgh9999ijkl1111mnop2222qrst
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_DATABASE=root
+DB_USERNAME=123456
 DB_PASSWORD=secret
 
-CACHE_DRIVER=memcached
+CACHE_DRIVER=redis
 QUEUE_DRIVER=sync
