--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "phpunit/phpunit": "~4.0"
     },
     "autoload": {
+        "files": [
+            "app/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         }
